--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Home - Fat Cat Accounting</title>
+        <title>Home - New Tax Website</title>
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style> body {background-color:black; font-family: Verdana, sans-serif;line-height: 1.5;}</style>
@@ -153,6 +153,7 @@
             var myAboutDropdown = document.getElementById("mobileAboutDropdown");
             if (myAboutDropdown.classList.contains('show')) {
                 myAboutDropdown.classList.remove('show');
+                myServicesDropdown.classList.add('Color:red;');
             }
         }
 
